# serde_bench

./: Cargo.toml  README.md
benches/: deserialize.rs  deserialize_block.rs  deserialize_header.rs  serialize.rs  serialize_block.rs  serialize_header.rs
schemas/: bench.fbs  bench.mol  bench.proto
src/: bench_flatbuffers.rs  bench_molecule.rs  bench_protobuf.rs  lib.rs
