[package]
name = "serde_bench"
version = "0.1.0"
authors = ["quake wang <quake.wang@gmail.com>"]

[dependencies]
bigint = { git = "https://github.com/NervosFoundation/bigint" }
rand = "0.5.0"
flatbuffers = "0.5.0"
protobuf = "2.1.1"
ssz = { git = "https://github.com/sigp/lighthouse" }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "serialize_block"
harness = false

[[bench]]
name = "deserialize_block"
harness = false

[[bench]]
name = "serialize_header"
harness = false

[[bench]]
name = "deserialize_header"
harness = false
