[package]
name = "serde_bench"
version = "0.2.0"
edition = "2018"
authors = ["quake wang <quake.wang@gmail.com>"]

[dependencies]
bigint = { git = "https://github.com/NervosFoundation/bigint" }
rand = "0.7"
flatbuffers = "0.6"
protobuf = "2.10"
molecule = "0.5"

[dev-dependencies]
criterion = { git = "https://github.com/bheisler/criterion.rs" }

[[bench]]
name = "serialize_block"
harness = false

[[bench]]
name = "deserialize_block"
harness = false

[[bench]]
name = "serialize_header"
harness = false

[[bench]]
name = "deserialize_header"
harness = false
